[package]
name = "comnotbot"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]

[dependencies]
futures-await = "0.1"
futures-retry = "0.1"
proc-macro2 = "=0.4.6"
# telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "a2db637", features = ["curl_connector"] }
telegram-bot = { path = "/Users/sergey-mishin/sources/telegram-bot/lib" }
telegram-bot-raw = { path = "/Users/sergey-mishin/sources/telegram-bot/raw" }
tokio-core = "0.1"
bincode = "1.0.1"

serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0"

lmdb-rs = "0.7.6"
