[package]
name = "comnotbot"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]

[dependencies]
futures-await = "0.1"
futures-retry = "0.1"
proc-macro2 = "=0.4.6"
# telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "a2db637", features = ["curl_connector"] }
# telegram-bot = { path = "/Users/sergey-mishin/sources/telegram-bot/lib" }
# telegram-bot-raw = { path = "/Users/sergey-mishin/sources/telegram-bot/raw" }
tokio-core = "0.1"
bincode = "1.0.1"

# teleborg = "0.1.32"

# The patched teleborg to be able to ser & de the teleborg primitives
teleborg = { git = "https://github.com/qezz/teleborg.git", rev = "d2482e9" }
# config = "0.8"
config = { git = "https://github.com/mehcode/config-rs.git", rev = "e8fa9fe" }

serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0"

lmdb-rs = "0.7.6"
lazy_static = "1.0"

log = "0.4.0"
env_logger = "0.5.10"

failure = "0.1.1"
failure_derive = "0.1.1"

